--- a/api/.env.dist
+++ b/api/.env.dist
@@ -21,3 +21,9 @@ CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
 
 VARNISH_URL=http://cache-proxy
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=58ca67c69e2ce0c33c00e573ed18c531
+###< lexik/jwt-authentication-bundle ###
