--- a/api/composer.json
+++ b/api/composer.json
@@ -15,10 +15,12 @@
     },
     "require-dev": {
         "api-platform/schema-generator": "^2.1",
+        "behat/behat": "^3.5",
         "symfony/dotenv": "^4.0",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
+        "bin-dir": "bin/",
         "preferred-install": {
             "*": "dist"
         },
